# ChangeLog for app-text/texlive-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.96 2009/03/18 20:50:09 ranger Exp $

  18 Mar 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r4.ebuild:
  Marking texlive-core-2008-r4 ppc stable for bug 253551

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r4.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #253551

  13 Mar 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r4.ebuild:
  Marking texlive-core-2008-r4 ppc64 stable for bug 235551

  11 Mar 2009; Markus Meier <maekke@gentoo.org> texlive-core-2008-r4.ebuild:
  amd64 stable, bug #253551

  10 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r4.ebuild:
  Add ~arm/~s390/~sh

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  texlive-core-2008-r4.ebuild:
  x86 stable, bug 253551

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> texlive-core-2008-r4.ebuild:
  Stable for HPPA (bug #253551).

  27 Feb 2009; Ferris McCormick <fmccor@gentoo.org>
  texlive-core-2008-r4.ebuild:
  Sparc stable, part of Bug #253551.

  29 Nov 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r4.ebuild:
  Incoporate patches from Ryan Hill <dirtyepic@gentoo.org>, bug #249224, fix
  gcc 4.4 build and Vladimir Rapatskiy <rapatsky@gmail.com>, bug #247982,
  eliminate xpdf deprecated char* coversion warnings

*texlive-core-2008-r4 (20 Nov 2008)

  20 Nov 2008; Alexis Ballier <aballier@gentoo.org>
  -texlive-core-2008-r3.ebuild, +texlive-core-2008-r4.ebuild:
  push changes

  20 Nov 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r3.ebuild:
  Add updmap.d to CONFIG_PROTECT_MASK too as suggested by Dirk Heinrichs in
  bug #246668

  15 Nov 2008; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2008-r3.ebuild:
  Block dvibook for the 2008 version too, thanks Diego, bug #246957

  14 Nov 2008; Alexis Ballier <aballier@gentoo.org>