@@ -12,6 +12,7 @@ DIST texlive-core-2007-updated-config.ps.bz2 2981 RMD160 af88bbda9227e718ebf69d0
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
 DIST texlive-core-2008-texmf.d-1.tar.lzma 9521 RMD160 df138c1f9cafa9f158bbf07c6976a801b18ac7d1 SHA1 feaf331fba4ed6f13ac56bcdb69ee480547e7d99 SHA256 acb23020661ca1a744954eca9000194005a81d7913165dd3f9e451da0c9386ea
 DIST texlive-core-2008.tar.lzma 23175835 RMD160 629784b111c0d4bc9fac9f9131f63203d6e1dd38 SHA1 730986c628bd658b5062face9e400f61203d6b8d SHA256 60cf277a60311756ea51ed7e6c50b50d4069f4b4c007b11c114ca5c640e5a3c2
+DIST texlive-core-patches-10.tar.lzma 27824 RMD160 2f8eb2aabc34a02e9c270d98cf450b2142d7dfc5 SHA1 0f2621ca6b12cc2e2b4cfa70384e0995b3b5b57a SHA256 0ff422db806f4ad3119590a0bca0159d14c9c76302f8e5e5dd4165976d8e536c
 DIST texlive-core-patches-6.tar.bz2 20901 RMD160 70b78099143b942dd0d15ea41ede670f593f5357 SHA1 b018ae257b6b93ebd063f559fac1c3a996511952 SHA256 e9cbfe038874ef55facb276c6625c9e2d0859e4d1f63b52a657ed2e3b5649959
 DIST texlive-core-patches-9.tar.lzma 23165 RMD160 d9e01eadd0703f6538abf4c0db87bffa4bbdc082 SHA1 81985c89e99ff3ff788be597a10f9ac841037fb4 SHA256 41b9fc9af0563b2bd36670230d229bd2ec78d5bab71ccb21573ba9ca91c59f14
 DIST texlive-module-a2ping-2008.tar.lzma 31077 RMD160 d9a156c3e063831bc66fe3bf444903e7a5344d03 SHA1 2c7cbfb771fcb6f3b522fe7879de6904b34bb602 SHA256 e69a466b698a3c08fbb0cd7e8edf3d591d4d50d81b1a213e0d614aff78c77697
@@ -148,5 +149,6 @@ DIST texlive-module-texlive.infra-2008.tar.lzma 105129 RMD160 9de08b79d943f830ce
 DIST texlive-module-texlive.infra.doc-2008.tar.lzma 743421 RMD160 7e7c0f5a0205306f2a4cd02d20306775cba1b5ff SHA1 c4ab6ac0f09572203b268db9318053c34cb36bed SHA256 334cc5ad29d289daee2e638005300cd6b67231f902804276e047b259cca37a7c
 EBUILD texlive-core-2007-r13.ebuild 9001 RMD160 84e332d4de13f977d71a7731196a734b14329c67 SHA1 8f65098b0df44c3777bedf5e38bab5d041f74b5e SHA256 7e81911def06cc520760d69a892c60514053ee746c8d456b4d68eaa2be8e04e1
 EBUILD texlive-core-2008-r04.1.ebuild 12345 RMD160 8adebb8960bdd71ffb1040f55def98d19ac93a66 SHA1 dd95092628ee353284ce6046dd5ea38f846d7d6f SHA256 3c5a11011048c1b37a6d32b5c8bd0dc3edb55d41e44e2631d29b0b992a7a9d8a
-MISC ChangeLog 16515 RMD160 3644fc5a3f7102777d3cf1482c60461f2dcdeead SHA1 9f20964ce350b17d8b20e0977228ff527633ec9c SHA256 956a36f9ea04bd4b306acf6d8b8472bb92614ad55d928b5d7e88bd5774975505
+EBUILD texlive-core-2008-r5.ebuild 12504 RMD160 8c2007e890a0dccd3a1cf71071085f410a7e4873 SHA1 34bbd17162c808e02ff43900b2e8e9da5b34c0e9 SHA256 ccaa4141115aedbb25d1bec9afdfcddc9304814e2b8842080048e65139493349
+MISC ChangeLog 16737 RMD160 851961d15319641847e2d57d549ec7d8c78edead SHA1 911f3f9314efcbef17f89a3550609636844ab6c9 SHA256 bbf7c6be04a27c5d915b688a4edffed1984565bc1dc372cc099f9a53ad20baaa
 MISC metadata.xml 327 RMD160 10186cf048d44753bf4cec722eed45d2ade12316 SHA1 0254321c012da0e8f80aec6f29a0fb5b17675d4d SHA256 e520223493249c261b48f7f7460ed7c262d35383484e730cfefba51fde1195be
